--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </ul>
         </nav>
     </header>
-    <h2 class="news">Nyheter i butiken</h2>
+    <h2 class="news">Nyheter i butiken!</h2>
     <section class="wrapper-new">
         
         <section class="card"><img src="https://s1.adlibris.com/images/69671520/somngangaren.jpg" alt="Sömngångaren"></img>
