--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="navbar">
         <section class="logo">
-            <a href="index.html"><h1>Pärmar & Poesi</h1></a>
+            <a href="index.html"><img src="Parmar__Poesi.png" alt="Pärmar & Poesi"></img></a>
         </section>
         <a href="#" class="toggle-button">
             <span class="bar"></span>
@@ -20,43 +20,59 @@
         <nav class="navbar-links">
             <ul>
                 <li><a href="news.html">Nyheter</a></li>
-                <li><a href="#">Evenemang</a></li>
-                <li><a href="#">Kontakt</a></li>
+                <li><a href="events.html">Evenemang</a></li>
+                <li><a href="contact.html">Kontakt</a></li>
             </ul>
         </nav>
     </header>
-    <h2 class="news">Nyheter i butiken!</h2>
-    <section class="wrapper-new">
-        
-        <section class="card"><img src="https://s1.adlibris.com/images/69671520/somngangaren.jpg" alt="Sömngångaren"></img>
-        </section>
-        <section class="card"><img src="https://s2.adlibris.com/images/70992339/signerad-matfighten.jpg" alt="Matfighten"></img></section>
-        <section class="card"><img src="https://s2.adlibris.com/images/69706222/de-doda-och-de-levande.jpg" alt="De döda och de levande"></img></section>
-        <section class="card"><img src="https://s1.adlibris.com/images/69689113/alskade-betty.jpg" alt="Älskade Betty"></img></section>
-    </section>
+    <main>
 
-    <h2 class="events">Evenemang i butiken</h2>
-    <section class="wrapper-events">
+        <h2 class="news-index">Nyheter i butiken!</h2>
+        <section class="wrapper-new">
         
-        <section class="event-card">
-            <h2>Björn Hellberg</h2>
-            <h3>Signering</h3>
-            <span>25:e November - 2024</span>
-            <p>
-                Träffa Björn Hellberg och få din bok signerad.
-            </p>
-            <p>Björn Hellberg som just nu är aktuell med självbiografin Mannen utan simultanförmåga
-                signerar din bok för den nätta summan 500:-.
-            </p>
+            <section class="card"><img src="https://s1.adlibris.com/images/69671520/somngangaren.jpg" alt="Sömngångaren"></img>
+            </section>
+            <section class="card"><img src="https://s2.adlibris.com/images/70992339/signerad-matfighten.jpg" alt="Matfighten"></img></section>
+            <section class="card"><img src="https://s2.adlibris.com/images/69706222/de-doda-och-de-levande.jpg" alt="De döda och de levande"></img></section>
+            <section class="card"><img src="https://s1.adlibris.com/images/69689113/alskade-betty.jpg" alt="Älskade Betty"></img></section>
         </section>
-        <section class="event-card">
-            <h2>Björn Hellberg</h2>
-            <h3>Signering</h3>
-            <span>25:e November - 2024</span>
-            <p>
-                Träffa Björn Hellberg och få din bok signerad
-            </p>
+        <hr class="line">
+
+        <h2 class="events-index">Evenemang i butiken</h2>
+        <section class="wrapper-events">
+            <section class="event-card">
+                <h2>Stephen King</h2>
+                <h3>Mysrys med Stephen King</h3>
+                <span>31 Oktober 2024</span>
+                <p>
+                    Stephen King kommer hela vägen från USA till våran lilla butik för att berätta sina bästa skräckisar.
+                    Ta chansen att träffa en av vår tids största författare.
+                    2500:- för en selfie och signerad bok.
+                </p>
+            </section>
+            <section class="event-card">
+                <h2>Leif GW Persson</h2>
+                <h3>Signering</h3>
+                <span>25 November - 2024</span>
+                <p>
+                    Leif GW Persson grymtar, rosslar och diskuterar aktuella brottsfall.
+                    Du kan även få någon av Leif GW:s böcker signerad med en personlig hälsning.
+                    600:- vill GW ha för besväret.
+                </p>
+            </section>
+            <section class="event-card">
+                <h2>Björn Hellberg</h2>
+                <h3>Signering</h3>
+                <span>3:e December - 2024</span>
+                <p>
+                    Träffa Björn Hellberg och få din bok signerad.
+                </p>
+                <p>
+                    Björn Hellberg som just nu är aktuell med självbiografin Mannen utan simultanförmåga
+                    signerar din bok för den nätta summan 500:-.
+                </p>
+            </section>
         </section>
-    </section>
+    </main>
 </body>
 </html>
