--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
+    <meta name="description" content="Din lokala bokhandel i Trelleborg. Här hittar du nya böcker, populära böcker, 
+    skrivtillbehör. Evenemang i Trelleborg.">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pärmar & Poesi</title>
@@ -10,7 +12,7 @@
 <body>
     <header class="navbar">
         <section class="logo">
-            <a href="index.html"><img src="Parmar__Poesi.png" alt="Pärmar & Poesi"></img></a>
+            <a href="index.html"><img src="Parmar__Poesi.png" alt="Logotyp för bokhandeln Pärmar & Poesi i Trelleborg"></img></a>
         </section>
         <a href="#" class="toggle-button">
             <span class="bar"></span>
@@ -30,11 +32,11 @@
         <h2 class="news-index">Nyheter i butiken!</h2>
         <section class="wrapper-new">
         
-            <section class="card"><img src="https://s1.adlibris.com/images/69671520/somngangaren.jpg" alt="Sömngångaren"></img>
+            <section class="card"><img src="https://s1.adlibris.com/images/69671520/somngangaren.jpg" alt="Bokomslag för Sömngångaren av Lars Kepler"></img>
             </section>
-            <section class="card"><img src="https://s2.adlibris.com/images/70992339/signerad-matfighten.jpg" alt="Matfighten"></img></section>
-            <section class="card"><img src="https://s2.adlibris.com/images/69706222/de-doda-och-de-levande.jpg" alt="De döda och de levande"></img></section>
-            <section class="card"><img src="https://s1.adlibris.com/images/69689113/alskade-betty.jpg" alt="Älskade Betty"></img></section>
+            <section class="card"><img src="https://s2.adlibris.com/images/70992339/signerad-matfighten.jpg" alt="Bokomslag för Matfighten skriven av I Just Want To Be Cool"></img></section>
+            <section class="card"><img src="https://s2.adlibris.com/images/69706222/de-doda-och-de-levande.jpg" alt="Bokomslag för De döda och de levande skriven av Anders Nilsson"></img></section>
+            <section class="card"><img src="https://s1.adlibris.com/images/69689113/alskade-betty.jpg" alt="Bokomslag för Älskade Betty skriven av Katarina Widholm"></img></section>
         </section>
         <hr class="line">
 
