--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="/src/output.css" />
+    <link rel="stylesheet" href="src/output.css" />
     <link rel="icon" type="image/x-icon" href="favico.png" />
     <script src="script.js" defer></script>
     <meta charset="UTF-8" />
